--- a/KnockoutSamples/KnockoutSamples.csproj
+++ b/KnockoutSamples/KnockoutSamples.csproj
@@ -116,6 +116,7 @@
     <Content Include="Scripts\jquery-ui-1.8.11.min.js" />
     <Content Include="Scripts\jquery.spinbox.js" />
     <Content Include="Scripts\knockout-2.0.0.js" />
+    <Content Include="Scripts\knockout.unobtrusive.min.js" />
     <Content Include="Scripts\moment.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -174,6 +175,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\SpinBoxBinding.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\ReadWriteComputedValue.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Home\UnobtrusiveKnockoutPlugin.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
